fixing spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,13 +14,14 @@ body{
 
 h1 {
     font-size: 7vh;
+    letter-spacing: 0.2vh;
 }
 
 h2 {
     font-size: 8vh;
     font-family: Arial;
     margin-top: 0.5em;
-    letter-spacing: 0.7vh;
+    letter-spacing: 0.5vh;
     display: inline-block;
 }
 
